<resources>
    <string name="app_name">Fantasy Realms Scoring</string>
    <string name="start_button">Start</string>
    <string name="edit_button">Edit</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="settings_button">Settings</string>
    <string name="add_player_button">Add player</string>
    <string name="player_name_label">Player name :</string>
    <string name="player_name_with_score">"%1$s - Score : %2$d"</string>
    <string name="hand_size">"%1$d/%2$d"</string>
    <string name="new_player_default_value">New player</string>
    <string name="add_card_button">Add card</string>
    <string name="x_cards">%1$d card(s)</string>
    <string name="scan_button">Scan</string>
    <string name="clear_button">Clear</string>
    <string name="share_button">Share</string>
    <string name="scan_help_label">Tip: only card titles are mandatory</string>
    <string name="base">BASE</string>
    <string name="disclaimer" translatable="false">Contact : <a href="https://github.com/lcha78/fantasy-realm-scoring">github</a>\nIcons made by Freepik and Smashicons :<a href="www.flaticon.com">flaticon</a></string>
    <string name="version_label">Version %1$s</string>
    <string name="done">Done</string>
    <string name="scan_mode_label" translatable="false">Scan mode:</string>
    <string name="language_label">Language:</string>
    <string name="language_label_english" translatable="false">English</string>
    <string name="language_label_russian" translatable="false">русский</string>
    <string name="language_label_german" translatable="false">Deutsch</string>
    <string name="language_label_spanish" translatable="false">Español</string>
    <string name="language_label_hungarian" translatable="false">Magyar</string>
    <string name="language_label_french" translatable="false">Français</string>
    <string name="language_label_polish" translatable="false">Polski</string>
    <string name="language_label_czech" translatable="false">čeština</string>
    <string name="language_label_ukrainian" translatable="false">Українська</string>
    <string name="display_card_number_label">Display card number:</string>
    <string name="remove_already_selected_label">Remove cards already selected:</string>
    <string name="display_chip_color_on_search_label">Display chip color on search:</string>
    <string name="wildfire_with_outsiders_label">Wildfire without Outsiders blanking:</string>
    <string name="phoenix_deluxe_edition_label">Phoenix (Deluxe Edition):</string>
    <string name="buildings_outsiders_undead_label">Buildings, outsiders and undead:</string>
    <string name="cursed_items_label">Cursed items:</string>
    <string name="ocr_matching_score_threshold_label" translatable="false">OCR matching score threshold:</string>
    <string name="ocr_difference_length_threshold_label" translatable="false">OCR difference length threshold:</string>
    <string name="saved_players" translatable="false">saved_players</string>
    <string name="saved_discard" translatable="false">saved_discard</string>
    <string name="discard_area">Discard area</string>
    <string name="default_value_zero" translatable="false">0</string>
    <string name="effect_bonus">BONUS</string>
    <string name="effect_clear">CLEAR</string>
    <string name="effect_penalty">PENALTY</string>
    <string name="effect_blank">BLANK</string>
    <string name="effect_unbankable" translatable="false">UNBLANKABLE</string>
    <string name="effect_reduce_base_strength_to_zero" translatable="false">REDUCE_BASE_STRENTGH_TO_ZERO</string>
    <string name="suit_army">Army</string>
    <string name="suit_artifact">Artifact</string>
    <string name="suit_beast">Beast</string>
    <string name="suit_flame">Flame</string>
    <string name="suit_flood">Flood</string>
    <string name="suit_land">Land</string>
    <string name="suit_leader">Leader</string>
    <string name="suit_weapon">Weapon</string>
    <string name="suit_weather">Weather</string>
    <string name="suit_wild">Wild</string>
    <string name="suit_wizard">Wizard</string>
    <string name="suit_building">Building</string>
    <string name="suit_outsider">Outsider</string>
    <string name="suit_undead">Undead</string>
    <string name="suit_cursed_item">Cursed item</string>
    <string name="rangers">Rangers</string>
    <string name="elven_archers">Elven Archers</string>
    <string name="dwarvish_infantry">Dwarvish Infantry</string>
    <string name="light_cavalry">Light Cavalry</string>
    <string name="celestial_knights">Knights</string>
    <string name="protection_rune">Protection Rune</string>
    <string name="world_tree">World Tree</string>
    <string name="book_of_changes">Book of Changes</string>
    <string name="shield_of_keth">Shield of Keth</string>
    <string name="gem_of_order">Gem of Order</string>
    <string name="warhorse">Warhorse</string>
    <string name="unicorn">Unicorn</string>
    <string name="hydra">Hydra</string>
    <string name="dragon">Dragon</string>
    <string name="basilisk">Basilisk</string>
    <string name="candle">Candle</string>
    <string name="fire_elemental">Fire Elemental</string>
    <string name="forge">Forge</string>
    <string name="lightning">Lightning</string>
    <string name="wildfire">Wildfire</string>
    <string name="fountain_of_life">Fountain of Life</string>
    <string name="water_elemental">Water Elemental</string>
    <string name="island">Island</string>
    <string name="swamp">Swamp</string>
    <string name="great_flood">Great Flood</string>
    <string name="earth_elemental">Earth Elemental</string>
    <string name="cavern">Cavern</string>
    <string name="forest">Forest</string>
    <string name="bell_tower">Bell Tower</string>
    <string name="mountain">Mountain</string>
    <string name="princess">Princess</string>
    <string name="warlord">Warlord</string>
    <string name="queen">Queen</string>
    <string name="king">King</string>
    <string name="empress">Empress</string>
    <string name="magic_wand">Magic Wand</string>
    <string name="elven_longbow">Elven Longbow</string>
    <string name="sword_of_keth">Sword of Keth</string>
    <string name="warship">Warship</string>
    <string name="war_dirigible">War Dirigible</string>
    <string name="air_elemental">Air Elemental</string>
    <string name="rainstorm">Rainstorm</string>
    <string name="whirlwind">Whirlwind</string>
    <string name="smoke">Smoke</string>
    <string name="blizzard">Blizzard</string>
    <string name="shapeshifter">Shapeshifter</string>
    <string name="mirage">Mirage</string>
    <string name="doppelganger">Doppelganger</string>
    <string name="necromancer">Necromancer</string>
    <string name="enchantress">Enchantress</string>
    <string name="collector">Collector</string>
    <string name="beastmaster">Beastmaster</string>
    <string name="warlock_lord">Warlock Lord</string>
    <string name="jester">Jester</string>
    <string name="phoenix">Phoenix</string>
    <string name="dungeon">Dungeon</string>
    <string name="castle">Castle</string>
    <string name="crypt">Crypt</string>
    <string name="chapel">Chapel</string>
    <string name="garden">Garden</string>
    <string name="genie">Genie</string>
    <string name="judge">Judge</string>
    <string name="angel">Angel</string>
    <string name="leprechaun">Leprechaun</string>
    <string name="demon">Demon</string>
    <string name="dark_queen">Dark Queen</string>
    <string name="ghoul">Ghoul</string>
    <string name="specter">Specter</string>
    <string name="lich">Lich</string>
    <string name="death_knight">Death Knight</string>
    <string name="spyglass">Spyglass</string>
    <string name="sarcophagus">Sarcophagus</string>
    <string name="blindfold">Blindfold</string>
    <string name="book_of_prophecy">Book of Prophecy</string>
    <string name="crystal_ball">Crystal Ball</string>
    <string name="market_wagon">Market Wagon</string>
    <string name="backpack">Backpack</string>
    <string name="shovel">Shovel</string>
    <string name="sealed_vault">Sealed Vault</string>
    <string name="crystal_lens">Crystal Lens</string>
    <string name="larcenous_gloves">Larcenous Gloves</string>
    <string name="junkyard_map">Junkyard Map</string>
    <string name="winged_boots">Winged Boots</string>
    <string name="staff_of_transmutation">Staff of Transmutation</string>
    <string name="rake">Rake</string>
    <string name="treasure_chest">Treasure Chest</string>
    <string name="fishhook">Fishhook</string>
    <string name="repair_kit">Repair Kit</string>
    <string name="hourglass">Hourglass</string>
    <string name="gold_mirror">Gold Mirror</string>
    <string name="cauldron">Cauldron</string>
    <string name="lantern">Lantern</string>
    <string name="portal">Portal</string>
    <string name="wishing_ring">Wishing Ring</string>
    <string name="rangers_rules">Bonus: +10 for each Land; Clears the word Army from Penalty section of all cards in hand</string>
    <string name="elven_archers_rules">Bonus: +5 if no Weather in hand</string>
    <string name="dwarvish_infantry_rules">Penalty: -2 for each other Army</string>
    <string name="light_cavalry_rules">Penalty: -2 for each Land</string>
    <string name="celestial_knights_rules">Penalty: -8 unless with at least one Leader</string>
    <string name="protection_rune_rules">Clears the Penalty sections on all cards in hand</string>
    <string name="world_tree_rules">Bonus: +50 if every active card in hand is a different suit</string>
    <string name="book_of_changes_rules">Bonus: you may change the suit of one other card. Its name, bonuses and penalties remain the same.</string>
    <string name="shield_of_keth_rules">Bonus: +15 with any one Leader, +40 with both Leader and Sword of Keth</string>
    <string name="gem_of_order_rules">Bonus: +10 for 3-card run, +30 for 4-card run, +60 for 5-card run, +100 for 6-card run, +150 for 7-card run</string>
    <string name="warhorse_rules">Bonus: +14 with any Leader or Wizard</string>
    <string name="unicorn_rules">Bonus: +30 with Princess, +15 with Empress, Queen, or Enchantress</string>
    <string name="hydra_rules">Bonus: +28 with Swamp</string>
    <string name="dragon_rules">Penalty: -40 unless with at least one Wizard</string>
    <string name="basilisk_rules">Penalty: Blanks all Armies, Leaders, and other Beasts</string>
    <string name="candle_rules">Bonus: +100 with Book of Changes, Bell Tower, and any one Wizard</string>
    <string name="fire_elemental_rules">Bonus: +15 for each other Flame</string>
    <string name="forge_rules">Bonus: +9 for each Weapon and Artifact</string>
    <string name="lightning_rules">Bonus: +30 with Rainstorm</string>
    <string name="wildfire_rules">Blanks all cards except Flames, Weather, Wizards, Weapons, Artifacts, Great Flood, Island, Mountain, Unicorn, Dragon</string>
    <string name="wildfire_rules_with_outsiders">Blanks all cards except Artifacts, Flames, Outsiders, Weapons, Weather, Wizards, Great Flood, Island, Mountain, Unicorn, Dragon</string>
    <string name="fountain_of_life_rules">Bonus: Add the base strength of any Weapon, Flood, Flame, Land, or Weather in your hand</string>
    <string name="water_elemental_rules">Bonus: +15 for each other Flood</string>
    <string name="island_rules">Clears the Penalty on any one Flood or Flame</string>
    <string name="swamp_rules">"Penalty: -3 for each Army and Flame"</string>
    <string name="great_flood_rules">Penalty: Blanks all Armies, all Land except Mountain, all Flames except Lightning</string>
    <string name="earth_elemental_rules">Bonus: +15 for each other Land</string>
    <string name="cavern_rules">Bonus: +25 with Dwarvish Infantry or Dragon; Clears the Penalty on all Weather</string>
    <string name="forest_rules">Bonus: +12 for each Beast and Elven Archers</string>
</resources>