<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.OnTheFlyScanActivity">

    <TextView
        android:id="@+id/numberOfCardsLabel"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/x_cards"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/flashButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:elevation="2dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_info_details"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOk"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReset" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chipsView"
        android:layout_width="145dp"
        android:layout_height="match_parent"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.camera.view.PreviewView>

</androidx.constraintlayout.widget.ConstraintLayout>