<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="anyRtl"
    android:fitsSystemWindows="true"
    tools:context=".screen.MainActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="348dp"
        android:layout_height="68dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/castleIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/swordIcon"
            android:layout_width="0dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_swordbase"
            app:tint="?android:attr/textColorPrimary" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/bookIcon"
            android:layout_width="103dp"
            android:layout_height="109dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_book_animated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/castleIcon"
        android:layout_width="240dp"
        android:layout_height="245dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/versionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/ic_castle"
        app:tint="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/disclaimerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Version 0.36" />

    <TextView
        android:id="@+id/disclaimerLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/disclaimer"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>